com.github.bartzaalberg.recipes (0.0.1) UNSTABLE; urgency=low

  * First release

 -- Bart Zaalberg <bartzaalberg@gmail.com>  Sun, 13 Jan 2019 16:21:00 +0200
