@@ -16,11 +16,14 @@
     </ul>
   </description>
   <releases>
-    <release version="0.0.1" date="2019-01-16">
+    <release version="0.0.1" date="2019-01-17">
       <description>
         <p>First release</p>
         <ul>
           <li>First release</li>
+          <li>View recipes</li>
+          <li>Change languages</li>
+          <li>Add your own recipe by PR</li>
         </ul>
       </description>
     </release>
